RESOLVED FIXED47419
[chromium] Clipboard no longer accepts 'text' as a synonym for 'text/plain'
https://bugs.webkit.org/show_bug.cgi?id=47419
Summary [chromium] Clipboard no longer accepts 'text' as a synonym for 'text/plain'
Daniel Cheng
Reported 2010-10-08 09:20:24 PDT
This was a regression introduced in r68807.
Attachments
Patch (3.74 KB, patch)
2010-10-08 13:21 PDT, Daniel Cheng
no flags
Patch (4.27 KB, patch)
2010-10-08 15:59 PDT, Daniel Cheng
no flags
Daniel Cheng
Comment 1 2010-10-08 13:21:51 PDT
Tony Chang
Comment 2 2010-10-08 13:23:56 PDT
Comment on attachment 70279 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=70279&action=review > LayoutTests/editing/pasteboard/script-tests/dataTransfer-setData-getData.js:123 > + debug("--- Test set 'text/plain', get 'text':"); > + test("text/plain", "Lorem ipsum dolor sit amet.", > + "text", "Lorem ipsum dolor sit amet."); Can you add some test cases that set "text" and read "text" or "text/plain"?
Daniel Cheng
Comment 3 2010-10-08 15:59:33 PDT
WebKit Commit Bot
Comment 4 2010-10-10 12:49:06 PDT
Comment on attachment 70308 [details] Patch Clearing flags on attachment: 70308 Committed r69470: <http://trac.webkit.org/changeset/69470>
WebKit Commit Bot
Comment 5 2010-10-10 12:49:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.