2010-10-10  Daniel Cheng  <dcheng@chromium.org>

Reviewed by Adam Barth.

        [chromium] Clipboard no longer accepts 'text' as a synonym for 'text/plain'
        https://bugs.webkit.org/show_bug.cgi?id=47419

        This was a regression introduced in r68807. Updated the layout test to
        check for this case.

        * editing/pasteboard/dataTransfer-setData-getData-expected.txt:
        * editing/pasteboard/script-tests/dataTransfer-setData-getData.js:
        (runTest):
2010-10-10  Daniel Cheng  <dcheng@chromium.org>

        Reviewed by Adam Barth.

        [chromium] Clipboard no longer accepts 'text' as a synonym for 'text/plain'
        https://bugs.webkit.org/show_bug.cgi?id=47419

        This was a regression introduced in r68807. mimeTypeText had the incorrect
        value.

        Test: editing/pasteboard/dataTransfer-setData-getData.html

        * platform/chromium/ClipboardMimeTypes.cpp:

Canonical link: https://commits.webkit.org/60070@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69470 268f45cc-cd09-0410-ab3c-d52691b4dbfc